<resources>
    <string name="app_name">MyNewApplication</string>
    <string name="once_loved">Once Loved</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="remember_me">Remember Me</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="got_stuff_to_give_away">Got Stuff to give away?</string>
    <string name="post_items">Post items</string>
    <string name="want_free_stuff_or_want_to_trade">Want free stuff or want to Trade?</string>
    <string name="clothing">Clothing</string>
    <string name="toys">Toys</string>
    <string name="button">Button</string>
    <string name="shoes">Shoes</string>
    <string name="books">Books</string>
    <string name="no_promotions_services_or_advertising">No Promotions, Services or Advertising</string>
    <string name="post_title">Post Title</string>
    <string name="categories">Categories</string>
    <string name="clothes">Clothes</string>
    <string name="book">Book</string>
    <string name="toy">Toy</string>
    <string name="footwear">Footwear</string>
    <string name="description">Description</string>
    <string name="eg_baby_girl_shoes">eg : Baby girl shoes</string>
    <string name="add_photo">Add Photo</string>
    <string name="register">Register</string>
    <string name="enter_your_phone_number">Enter your Phone number</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_postal_address">Enter your Postal address </string>
    <string name="create_your_password">Create your Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_your_email_add">Enter your email add</string>
    <string name="a_place_to_swap_your_kid_s_pre_loved_stuff">A place to swap your kid\'s pre-loved stuff</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="mother_care_unisex_baby_bodysuit_vibrant_colors_and_in_excellent_condition_size_0_3_months">Mother Care Unisex Baby Bodysuit.Vibrant colors and in excellent condition.Size 0-3 months</string>
    <string name="unisex_baby_bodysuits">Unisex Baby Bodysuits</string>
    <string name="pretty_minie_mouse_outfit">Pretty Minie Mouse Outfit</string>
    <string name="cute_baby_girl_outfit">Cute baby girl outfit</string>
    <string name="funny_quote_baby_bodysuit">Funny Quote Baby Bodysuit</string>
    <string name="cute_monkey_outfit">Cute Monkey Outfit</string>
    <string name="pretty_red_dress">Pretty Red dress</string>
    <string name="cute_bunny_wooden_toy">Cute Bunny wooden toy</string>
    <string name="house_toy">House Toy</string>
    <string name="educational_toys">Educational Toys</string>
    <string name="bycycle_for_kids">Bycycle for kids</string>
    <string name="talking_puppy">Talking Puppy</string>
    <string name="wooden_cycyle">Wooden cycyle</string>
    <string name="your_item_has_been_posted">Your Item has been Posted</string>
    <string name="submit">Submit</string>
    <string name="e_g_girl_s_shoes_size_10">e.g. Girl\'s shoes size 10</string>
    <string name="short_description_max_25_chars">Short Description (max 25 chars)</string>
    <string name="additional_information">Additional Information</string>
    <string name="max_140_characters">max 140 characters</string>
    <string name="post_item">POST ITEM</string>
    <string name="title_activity_view_posted_item">ViewPostedItem</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="your_item_has_been_posted">Your Item Has Been Posted</string>
</resources>
