<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/submitBut"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF84"
    android:hapticFeedbackEnabled="false"
    tools:context=".Additems">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="348dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/no_promotions_services_or_advertising"
        android:gravity="center_horizontal"
        android:textColor="#9C27B0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/categories"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/clothes"
        android:textColor="#E91E63"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="70dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/toys"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/checkBox2"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/shoes"
        android:textColor="#E91E63"
        app:layout_constraintStart_toEndOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/books"
        android:textColor="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox4"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="292dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/short_description_max_25_chars"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/checkBox2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <TextView
        android:id="@+id/textAdditionalInfo"
        android:layout_width="292dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/additional_information"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/editText"
        app:layout_constraintTop_toBottomOf="@id/editText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="bottom|start"
        android:hint="@string/e_g_girl_s_shoes_size_10"
        android:inputType="text"
        android:maxLength="25"
        android:textColor="#E91E63"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editAddInfo"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|bottom"
        android:hint="@string/max_140_characters"
        android:inputType="textMultiLine"
        android:maxLength="140"
        android:maxLines="5"
        android:scrollHorizontally="false"
        android:textColor="#E91E63"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/textAdditionalInfo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/textAdditionalInfo"
        app:layout_constraintTop_toBottomOf="@id/textAdditionalInfo" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/add_photo"
        android:textColor="#673AB7"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/editAddInfo"
        app:layout_constraintTop_toBottomOf="@id/editAddInfo" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="169dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="169dp"
        android:layout_marginBottom="44dp"
        android:text="@string/post_item"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>