<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF84"
    tools:context=".Clothing">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="165dp"
        android:layout_height="146dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:contentDescription="@string/mother_care_unisex_baby_bodysuit_vibrant_colors_and_in_excellent_condition_size_0_3_months"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        app:srcCompat="@drawable/bodysuits" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="165dp"
        android:layout_height="146dp"
        android:layout_marginStart="192dp"
        android:layout_marginLeft="192dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        app:srcCompat="@drawable/knittedbabyclothes" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="165dp"
        android:layout_height="146dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="196dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.447"
        app:srcCompat="@drawable/mini" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="165dp"
        android:layout_height="146dp"
        android:layout_marginStart="228dp"
        android:layout_marginLeft="228dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468"
        app:srcCompat="@drawable/mummy" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:text="@string/cute_baby_girl_outfit"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/pretty_minie_mouse_outfit"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:text="@string/funny_quote_baby_bodysuit"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="165dp"
        android:layout_height="146dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876"
        app:srcCompat="@drawable/monkey"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="167dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cute_monkey_outfit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="165dp"
        android:layout_height="145dp"
        android:layout_marginStart="228dp"
        android:layout_marginLeft="228dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875"
        app:srcCompat="@drawable/reddress" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="167dp"
        android:layout_height="40dp"
        android:layout_marginStart="232dp"
        android:layout_marginLeft="232dp"
        android:text="@string/pretty_red_dress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/unisex_baby_bodysuits"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.288" />

</androidx.constraintlayout.widget.ConstraintLayout>